# qs

./: Cargo.toml  DEVELOPING.md  LICENSE  Makefile  README.md  USAGE.md  rustfmt.toml
.github/workflows/: ci.yml
src/: command.rs  config.rs  lib.rs  main.rs  util.rs
tests/: config.rs  remove_command.rs  util.rs
